--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.408.0",
+    "lucide-react": "^0.417.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
